Fix word wrap in dialogs

--- a/app/less/_dialog.less
+++ b/app/less/_dialog.less
@@ -27,6 +27,7 @@
 
       .content-media {
         margin-top: 20px;
+        word-wrap: break-word;
 
         .form-group {
           label {
